[package]
name = "grpc-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gotabit-sdk-proto = {path = "../gotabit-sdk-proto", features = ["cosmwasm"]}
tokio = { version = "1.0", features = ["rt-multi-thread", "macros"] }
rand_core = { version = "0.6", features = ["std"] }
bip32 = "0.5.1"
tonic = { version = "0.9.0", optional = true, default-features = false, features = ["codegen", "prost", "tls", "tls-roots"] }
cosmrs = "0.14.0"
prost-types = "0.11"
signature = "2.1.0"

[features]
default = ["grpc-transport"]
grpc = ["tonic"]
grpc-transport = ["grpc", "tonic/transport"]
cosmwasm = []

[dev-dependencies]
log = "0.4.20"                             # A lightweight logging facade for Rust 
